@@ -21,17 +21,13 @@
 
 BUILD_BASE=${PWD}
 
-all: doc
+all:
 	python setup.py build --build-base=${BUILD_BASE}
-
-doc:
-	docbook2x-man docs/debomatic.1.docbook
-	docbook2x-man docs/debomatic.conf.5.docbook
 
 install:
 	python setup.py install
-	install -m 644 debomatic.1 /usr/share/man/man1/debomatic.1
-	install -m 644 debomatic.conf.5 /usr/share/man/man5/debomatic.conf.5
+	install -m 644 docs/debomatic.1 /usr/share/man/man1/debomatic.1
+	install -m 644 docs/debomatic.conf.5 /usr/share/man/man5/debomatic.conf.5
 
 uninstall:
 	rm /usr/bin/debomatic
@@ -43,5 +39,3 @@ uninstall:
 clean:
 	python setup.py clean --build-base=${BUILD_BASE}
 	rm -fr build
-	rm -f *.1 *.5
-
