@@ -1,92 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook XML V4.2//EN"
-"http://www.oasis-open.org/docbook/xml/4.2/docbookx.dtd" [
-]>
-<refentry>
-  <refentryinfo>
-    <author>
-      <firstname>Luca</firstname>
-      <surname>Falavigna</surname>
-      <email>dktrkranz@ubuntu.com</email>
-    </author>
-    <copyright>
-      <year>2007-2009</year>
-      <holder>Luca Falavigna</holder>
-    </copyright>
-    <!-- XXX IMPORTANT XXX -->
-    <!-- Keep this date up to date: -->
-    <date>2009-01-26</date>
-    <!--  ^^^^^^^^^^ -->
-  </refentryinfo>
-  <refmeta>
-    <refentrytitle>debomatic</refentrytitle>
-    <manvolnum>1</manvolnum>
-  </refmeta>
-  <refnamediv>
-    <refname>debomatic</refname>
-    <refpurpose>Automatic build machine for Debian source packages</refpurpose>
-  </refnamediv>
-  <refsynopsisdiv>
-    <cmdsynopsis>
-      <command>debomatic</command>
-      <arg choice="plain">
-        <option><replaceable>-c|--config conffile</replaceable></option>
-        <option><replaceable>[-n|--nodaemon]</replaceable></option>
-      </arg>
-    </cmdsynopsis>
-  </refsynopsisdiv>
-  <refsect1>
-    <title>DESCRIPTION</title>
-    <para>
-      This tool provides a simple build machine for Debian source packages.
-      It is designed to be very simple to use and self-sufficient during 
-      package build process and chroot updates. It support almost every
-      Debian-based distribution (such as Ubuntu), given its repositories
-      follow standard Debian repository structure.
-    </para>
-    <para>
-      <application>pbuilder</application> and an active Internet connection
-      (broadband is suggested) are required in order for debomatic to work 
-      properly.
-    </para>
-    <para>
-      You have to run it using root privileges because of 
-      <application>pbuilder</application> infrastructure.
-    </para>
-  </refsect1>
-  <refsect1>
-    <title>OPTIONS</title>
-    <para>
-      <emphasis>-c|--config conffile</emphasis>: you have to specify a
-      configuration file for debomatic to work. See debomatic.conf(5) for 
-      further details.
-    </para>
-    <para>
-      <emphasis>-n|--nodaemon</emphasis>: by default, debomatic runs in full
-      daemon mode and it detaches itself from its parent. If you do not want
-      this, you can use this option and debomatic will not detach from parent
-      process.
-    </para>
-  </refsect1>
-  <refsect1>
-    <title>COPYRIGHT</title>
-    <para>
-      This manual page was written by Luca Falavigna 
-      &lt;dktrkranz@ubuntu.com&gt;. Permission is granted to copy, distribute 
-      and/or modify this document under the terms of the 
-      <acronym>GNU</acronym> General Public License, Version 2 or any later 
-      version published by the Free Software Foundation.
-    </para>
-    <para>
-      On Debian systems (like Ubuntu), the complete text of the GNU General
-      Public License can be found in
-      <filename>/usr/share/common-licenses/GPL</filename>.
-    </para>
-  </refsect1>
-<refsect1>
-    <title>SEE ALSO</title>
-    <para>
-      debomatic.conf(5)
-    </para>
-  </refsect1>
-</refentry>
