@@ -1,88 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook XML V4.2//EN"
-"http://www.oasis-open.org/docbook/xml/4.2/docbookx.dtd" [
-]>
-<refentry>
-  <refentryinfo>
-    <author>
-      <firstname>Luca</firstname>
-      <surname>Falavigna</surname>
-      <email>dktrkranz@ubuntu.com</email>
-    </author>
-    <copyright>
-      <year>2007-2009</year>
-      <holder>Luca Falavigna</holder>
-    </copyright>
-    <!-- XXX IMPORTANT XXX -->
-    <!-- Keep this date up to date: -->
-    <date>2009-01-26</date>
-    <!--  ^^^^^^^^^^ -->
-  </refentryinfo>
-  <refmeta>
-    <refentrytitle>debomatic.conf</refentrytitle>
-    <manvolnum>5</manvolnum>
-  </refmeta>
-  <refnamediv>
-    <refname>debomatic.conf</refname>
-    <refpurpose>Configuration file for debomatic</refpurpose>
-  </refnamediv>
-  <refsect1>
-    <title>DEFAULT SECTION</title>
-    <para>
-      <emphasis>packagedir</emphasis>: this directory is the base directory
-      where debomatic will scan for packages to build. It must exists before
-      launching debomatic or an exception will be raised.
-    </para>
-    <para>
-      <emphasis>configdir</emphasis>: this directory contains pbuilder
-      configuration files used to pass build options to pbuilder. They must
-      contain pbuilder specific parameters (see pbuilderrc(5) for further
-      reference) and their names must match target releases (such as intrepid
-      or unstable).
-    </para>
-    <para>
-      <emphasis>maxbuilds</emphasis>: maximum number of parallel build threads
-      to be launched. More threads will require powerful hardware.
-    </para>
-    <para>
-      <emphasis>inotify</emphasis>: if enabled, new threads will be launched
-      immediately when .changes files are put in packagedir.
-    </para>
-    <para>
-      <emphasis>sleep</emphasis>: debomatic will build another source package 
-      when a number of seconds provided by this parameter have elapsed.
-    </para>
-    <para>
-      <emphasis>logfile</emphasis>: debomatic messages will be stored in this file
-    </para>
-   </refsect1>
-  <refsect1>
-    <title>GPG SECTION</title>
-    <para>
-      <emphasis>gpg</emphasis>: if enabled, turn GPG support on to check for
-      signed packages before attempting to build them.
-    </para>
-    <para>
-      <emphasis>keyring</emphasis>: this file contains authorized GPG keys.
-      Source packages signed with one of the keys included are allowed to
-      build, other packages will be deleted from disk.
-    </para>
-   </refsect1>
-  <refsect1>
-    <title>MODULES</title>
-    <para>
-      <emphasis>modules</emphasis>: if enabled, allow modules to be plugged in
-      at runtime extending Deb-o-Matic features.
-    </para>
-    <para>
-      <emphasis>modulespath</emphasis>: this directory contains modules to be
-      plugged in at runtime when running Deb-o-Matic.
-    </para>
-   </refsect1>
-<refsect1>
-    <title>SEE ALSO</title>
-    <para>
-      debomatic(1), pbuilderrc(5)
-    </para>
-  </refsect1>
-</refentry>
