@@ -23,7 +23,6 @@ run in background and no user feedback is required during the whole process.</p>
 These packages are required to build and install Deb-o-Matic on your system:
 <ul>
 <li>python-dev</li>
-<li>docbook2x</li>
 </ul>
 These ones are required to execute Deb-o-Matic:
 <ul>
