@@ -20,7 +20,6 @@ Requisites
 These packages are required to build and install Deb-o-Matic on your system:
 
   * python-dev
-  * docbook2x
 
 These ones are required to execute Deb-o-Matic:
 
