@@ -1,3 +1,8 @@
+  122 Luca Falavigna	2009-02-09
+      Use standard man pages, no longer use docbook templates
+
+
+
 Tue 2009-01-27 20:36:31 +0100
 Stable release: 0.6
 
